pycsdr (0.18.17) bullseye jammy; urgency=low

  * Synchronizing with csdr 0.18.17.
  * Added experimental CCIR493 and DSC decoders.
  * Refactored and improved CW, SITOR-B, and CCIR476 decoders.
  * Fixed CW decoder to print underscores for unrecognized characters.
  * Added CW decoder option to print CW code (dits / dahs).

 -- Marat Fayzullin <luarvique@gmail.com>  Mon, 18 Dec 2023 16:12:00 +0000

pycsdr (0.18.16) bullseye jammy; urgency=low

  * Synchronizing with csdr 0.18.16.
  * Added SITOR and CCIR476+FEC decoders.

 -- Marat Fayzullin <luarvique@gmail.com>  Sat, 28 Oct 2023 16:12:00 +0000

pycsdr (0.18.15) bullseye jammy; urgency=low

  * Incrementing library version to match original PyCSDR 0.18.12.

 -- Marat Fayzullin <luarvique@gmail.com>  Thu, 12 Oct 2023 16:12:00 +0000

pycsdr (0.18.14) bullseye jammy; urgency=low

  * Synchronizing with csdr 0.18.14.
  * Added Jakob's RTTY decoder and made it the default.

 -- Marat Fayzullin <luarvique@gmail.com>  Sat, 16 Sep 2023 16:12:00 +0000

pycsdr (0.18.13) bullseye jammy; urgency=low

  * Synchronizing with csdr 0.18.13.
  * Greatly improved FAX decoder, able to receive photos now.
  * Removed intermediate buffers from SSTV, RTTY, CW decoders.
  * Removed default complex-to-float conversion.
  * SSTV and FAX decoders now use non-complex float input.

 -- Marat Fayzullin <luarvique@gmail.com>  Sat, 9 Sep 2023 16:12:00 +0000

pycsdr (0.18.12) bullseye jammy; urgency=low

  * Synchronizing with csdr 0.18.12.
  * Merged changes from Jakob Ketterl's original development branch.
  * Added Exec, Baudot, Noise, new DcBlock modules from Jakob.
  * Added support for complex char data format.
  * The original LibCSDR and CSDR tools replaced with CSDR++.

 -- Marat Fayzullin <luarvique@gmail.com>  Sat, 2 Sep 2023 16:12:00 +0000

pycsdr (0.18.11) bullseye jammy; urgency=low

  * Synchronizing with csdr 0.18.11.

 -- Marat Fayzullin <luarvique@gmail.com>  Sat, 17 Jun 2023 16:12:00 +0000
