@@ -18,12 +18,13 @@ static int Agc_init(Agc* self, PyObject* args, PyObject* kwds) {
     } else if (format == FORMAT_COMPLEX_FLOAT) {
         self->setModule(new Csdr::Agc<Csdr::complex<float>>());
     } else {
-        Py_DECREF(format);
         PyErr_SetString(PyExc_ValueError, "unsupported agc format");
         return -1;
     }
 
+    Py_INCREF(format);
     self->inputFormat = format;
+    Py_INCREF(format);
     self->outputFormat = format;
 
     return 0;
