@@ -35,6 +35,8 @@ static int TcpSource_init(TcpSource* self, PyObject* args, PyObject* kwds) {
         return -1;
     }
 
+    Py_INCREF(self->outputFormat);
+
     return 0;
 }
 
